changed order of portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ author: Jason Howie
 description: Jason Howie's personal website
 url: 'https://jasonrhowie.com'
 baseurl: ''
+# Permalink for blog posts
 permalink: /blog/:year/:month/:title/
 
 # Collections for portfolio
