add fa logos to nav

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 - name: Home
   link: /
+  font: fas fa-home
 - name: Portfolio
   link: /portfolio/
+  font: fas fa-portrait
 - name: Blog
   link: /blog/
+  font: fab fa-blogger
